--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -556,8 +556,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:onClick="TaskShow"
                 android:padding="10dp"
                 android:text="Задания"
                 app:layout_constraintEnd_toStartOf="@+id/scrollView2"
