--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,12 +79,14 @@
             android:id="@+id/imageView7"
             android:layout_width="414dp"
             android:layout_height="42dp"
-            android:background="@drawable/tamplatetfive"
+            android:background="@drawable/desk_tree"
             android:scaleType="fitXY"
+            app:layout_constraintBottom_toTopOf="@+id/constraintLayout1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.006" />
 
         <ImageView
             android:id="@+id/img_nextlvl"
@@ -302,54 +304,56 @@
             android:id="@+id/faq"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/faquest"
             android:onClick="onClick"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.866"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.957"
+            app:layout_constraintStart_toEndOf="@+id/textClock"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.003" />
+            app:layout_constraintVertical_bias="0.014" />
 
-        <ImageView
-            android:id="@+id/clock"
-            android:layout_width="70dp"
-            android:layout_height="35dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.686"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.011"
-            app:srcCompat="@drawable/ocloks" />
 
         <TextView
             android:id="@+id/textClock"
-            android:layout_width="50dp"
-            android:layout_height="24dp"
+            android:layout_width="120dp"
+            android:layout_height="41dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
             android:gravity="center"
-            android:text="TextView"
-            android:textColor="#DCCBCB"
-            android:textSize="10sp"
-            app:layout_constraintBottom_toBottomOf="@+id/clock"
-            app:layout_constraintEnd_toEndOf="@+id/clock"
-            app:layout_constraintStart_toStartOf="@+id/clock"
-            app:layout_constraintTop_toTopOf="@+id/clock" />
-
+            android:text="Очков смены слов:"
+            android:textColor="@color/cardview_light_background"
+            android:textColorHighlight="@color/cardview_light_background"
+            android:textColorHint="@color/cardview_light_background"
+            android:textColorLink="@color/cardview_light_background"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.688"
+            app:layout_constraintStart_toEndOf="@+id/lvlview"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="50dp"
             android:layout_marginBottom="5dp"
+            android:text="Очков: 0"
+            android:textColor="@color/cardview_light_background"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-            app:layout_constraintEnd_toStartOf="@+id/clock"
+            app:layout_constraintEnd_toStartOf="@+id/textClock"
+            app:layout_constraintHorizontal_bias="0.475"
             app:layout_constraintStart_toEndOf="@+id/lvlview"
-            app:layout_constraintTop_toTopOf="@+id/imageView7" />
+            app:layout_constraintTop_toTopOf="@+id/imageView7"
+            app:layout_constraintVertical_bias="0.454" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout1"
@@ -424,18 +428,19 @@
             android:id="@+id/lvlview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="150dp"
+            android:layout_marginBottom="150dp"
             android:gravity="center"
-            android:text="Уровень 1"
-            android:textColorHighlight="#000000"
-            android:textColorLink="#000000"
+            android:text="Уровень 0"
+            android:textColor="@color/cardview_light_background"
+            android:textColorHighlight="@color/cardview_light_background"
+            android:textColorHint="@color/cardview_light_background"
+            android:textColorLink="@color/cardview_light_background"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView7"
             app:layout_constraintEnd_toEndOf="@+id/imageView7"
-            app:layout_constraintHorizontal_bias="0.133"
+            app:layout_constraintHorizontal_bias="0.144"
             app:layout_constraintStart_toStartOf="@+id/imageView7"
             app:layout_constraintTop_toTopOf="@+id/imageView7" />
 
